Adding the crawler using an actor model approach (#12)
* Adding the crawler using an actor model approach
* Adding a new recursive approach with actors